--- a/galleria/src/main/resources/templates/form.html
+++ b/galleria/src/main/resources/templates/form.html
@@ -23,7 +23,7 @@
                     <span th:if="${#fields.hasErrors('anno')}" th:text="#{label.number}">Error</span>
                 </div>
                 <div>
-                    <span><button type="submit">Invia</button></span>
+                    <span><p><button type="submit">Invia</button></p></span>
                 </div>
             </div>
         </form>
