--- a/galleria/src/main/resources/templates/results.html
+++ b/galleria/src/main/resources/templates/results.html
@@ -18,5 +18,10 @@
 		</p>    
     </div>
 
+<form action="#" th:action="@{/opera}" method="get">
+<button type="submit">Torna alla form</button>
+</form>
+
+
 </body>
 </html>
