--- a/galleria/src/main/resources/templates/login.html
+++ b/galleria/src/main/resources/templates/login.html
@@ -1,27 +1,20 @@
-<html xmlns:th="http://www.thymeleaf.org" xmlns:tiles="http://www.thymeleaf.org">
-  <head>
-    <title>Login</title>
-  </head>
-  <body>
-    <div>
-        <form name="f" th:action="@{/login}" method="post">               
-            <fieldset>
-                <legend>Please Login</legend>
-                <div th:if="${param.error}" class="alert alert-error">    
-                    Invalid username and password.
-                </div>
-                <div th:if="${param.logout}" class="alert alert-success"> 
-                    You have been logged out.
-                </div>
-                <label for="username">Username</label>
-                <input type="text" id="username" name="username"/>        
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password"/>    
-                <div class="form-actions">
-                    <button type="submit" class="btn">Log in</button>
-                </div>
-            </fieldset>
-        </form>
-    </div>
-  </body>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+ <head>
+ <title>>Welcome Security with Spring Boot!</title>
+ </head>
+ <body>
+     <div th:if="${param.error}">
+        <h1 style="color:red">Username or Password is wrong. Please check again</h1>
+ 
+     </div>
+     <div th:if="${param.logout}">
+         <h1 style="color:blue">Logged out.</h1>
+     </div>
+     <form th:action="@{/login}" method="post">
+         <div><label> User Name : <input type="text" name="username"/> </label></div>
+         <div><label> Password: <input type="password" name="password"/> </label></div>
+         <div><input type="submit" value="Sign In"/>    </div>
+     </form>
+ </body>
 </html>
