--- a/galleria/src/main/resources/templates/login.html
+++ b/galleria/src/main/resources/templates/login.html
@@ -1,20 +1,48 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
- <head>
- <title>>Welcome Security with Spring Boot!</title>
- </head>
- <body>
-     <div th:if="${param.error}">
-        <h1 style="color:red">Username or Password is wrong. Please check again</h1>
- 
-     </div>
-     <div th:if="${param.logout}">
-         <h1 style="color:blue">Logged out.</h1>
-     </div>
-     <form th:action="@{/login}" method="post">
-         <div><label> User Name : <input type="text" name="username"/> </label></div>
-         <div><label> Password: <input type="password" name="password"/> </label></div>
-         <div><input type="submit" value="Sign In"/>    </div>
-     </form>
- </body>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<head>
+<title>>Welcome Security with Spring Boot!</title>
+<link href="../static/css/login.css" th:href="@{/css/login.css}"
+	rel="stylesheet" media="screen" />
+	<link href="../static/vendor/font-awesome/css/font-awesome.min.css" th:href="@{/vendor/font-awesome/css/font-awesome.min.css}"
+	rel="stylesheet" media="screen" />
+</head>
+<body>
+	<div class="main">
+		<div class="container">
+			<div class="middle">
+				<div id="login">
+
+					<div th:if="${param.error}">
+						<h1 style="color: red">Username or Password is wrong. Please
+							check again</h1>
+
+					</div>
+					<div th:if="${param.logout}">
+						<h1 style="color: blue">Logged out.</h1>
+					</div>
+					<form th:action="@{/login}" method="post">
+						<p>
+							<span class="fa fa-user"></span><input type="text"
+								name="username"></input>
+						</p>
+						<p>
+							<span class="fa fa-lock"></span><input type="password"
+								name="password"></input>
+						</p>
+							<a
+								class="small-text" href="#">Forgot password?</a> <input
+								type="submit" value="Accedi"></input>
+					</form>
+				</div>
+				<!--  end login -->
+			</div>
+			<!-- end middle -->
+		</div>
+		<!-- end container -->
+	</div>
+	<!-- end main -->
+</body>
 </html>
