--- a/galleria/src/main/resources/templates/login.html
+++ b/galleria/src/main/resources/templates/login.html
@@ -23,7 +23,10 @@
 							<span class="fa fa-lock"></span><input type="password"
 								name="password" placeholder="password"></input>
 						</p>
-							<span style="width:100%; text-align:center;  display: inline-block;"><input type="submit" value="Accedi"></input></span>
+						<span style="width:50%; text-align:left; float: left;"><input type="submit" value="Accedi"></input></span>
+					</form>
+					<form action="/">
+						<span style="width:50%; text-align:right;"><input type="submit" value="Home"></input></span>
 					</form>
 					<div th:if="${param.error}">
 						<h1 style="color: red">Username o Password errati</h1>
