Eliminata possibilita di avere utenti con lo stesso username

--- a/galleria/src/main/resources/templates/signUp.html
+++ b/galleria/src/main/resources/templates/signUp.html
@@ -24,24 +24,20 @@
 							<span class="fa fa-lock"></span><input type="password"
 								name="password" placeholder="password"></input>
 						</p>
-						
 						<p>
-							<span class="fa fa-map"></span><input type="text"
-								name="nome" placeholder="nome"></input>
+							<span class="fa fa-map"></span><input type="text" name="nome"
+								placeholder="nome"></input>
 						</p>
-						
 						<p>
-							<span class="fa fa-user"></span><input type="text"
-								name="cognome" placeholder="cognome"></input>
+							<span class="fa fa-user"></span><input type="text" name="cognome"
+								placeholder="cognome"></input>
 						</p>
-						
 						<p>
-							<span class="fa fa-user"></span><input type="text"
-								name="email" placeholder="email"></input>
+							<span class="fa fa-user"></span><input type="text" name="email"
+								placeholder="email"></input>
 						</p>
-						
 						<span style="width: 50%; text-align: left; float: left;"><input
-							type="submit" value="Accedi"></input></span>
+							type="submit" value="Registrati"></input></span>
 					</form>
 					<form action="/">
 						<span style="width: 50%; text-align: right;"><input
