--- a/galleria/src/main/resources/templates/datiUtente.html
+++ b/galleria/src/main/resources/templates/datiUtente.html
@@ -13,7 +13,12 @@
 	<div class="main">
 		<div class="container">
 			<div class="middle">
-				Benvenuto <span th:text="${user.username}" ></span>, questi sono i tuoi dati:
+				<h2>Benvenuto <span th:text="${user.username}" ></span>, questi sono i tuoi dati:<br></br><br></br>
+				Nome: <span th:text="${user.nome}" ></span><br></br>
+				Cognome: <span th:text="${user.cognome}" ></span><br></br>
+				Email: <span th:text="${user.email}" ></span><br></br>
+				
+				</h2>
 
 			</div><!-- end middle -->
 		</div><!-- end container -->
