--- a/galleria/src/main/resources/templates/signUp.html
+++ b/galleria/src/main/resources/templates/signUp.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>>Login</title>
 <link href="../static/css/login.css" th:href="@{/css/login.css}"
@@ -17,8 +15,8 @@
 				<div id="login">
 					<form th:action="@{/signUp}" method="post">
 						<p>
-							<span class="fa fa-user"></span><input type="text"
-								name="username" placeholder="username"></input>
+							<span class="fa fa-user"></span>
+							<input type="text" name="username" placeholder="username"></input>
 						</p>
 						<p>
 							<span class="fa fa-lock"></span><input type="password"
