--- a/galleria/src/main/resources/templates/signUp.html
+++ b/galleria/src/main/resources/templates/signUp.html
@@ -13,30 +13,42 @@
 		<div class="container">
 			<div class="middle">
 				<div id="login">
-					<form th:action="@{/signUp}" method="post">
-						<p>
-							<span class="fa fa-user"></span>
-							<input type="text" name="username" placeholder="username"></input>
-						</p>
-						<p>
-							<span class="fa fa-lock"></span><input type="password"
-								name="password" placeholder="password"></input>
-						</p>
-						<p>
-							<span class="fa fa-map"></span><input type="text" name="nome"
-								placeholder="nome"></input>
-						</p>
-						<p>
-							<span class="fa fa-user"></span><input type="text" name="cognome"
-								placeholder="cognome"></input>
-						</p>
-						<p>
-							<span class="fa fa-user"></span><input type="text" name="email"
-								placeholder="email"></input>
-						</p>
-						<span style="width: 50%; text-align: left; float: left;"><input
-							type="submit" value="Registrati"></input></span>
-					</form>
+					<form th:action="@{/signUp}" th:object="${user}" method="post">
+                        <p>
+                            <span class="fa fa-user"></span> 
+                            <input type="text"
+                                name="username" th:field="*{username}" placeholder="username"></input>
+                            <span th:if="${#fields.hasErrors('username')}"
+                                th:text="#{label.mandatory}">Error</span>
+                        </p>
+                        <p>
+                            <span class="fa fa-lock"></span><input type="password"
+                                th:field="*{password}" name="password" placeholder="password"></input>
+                            <span th:if="${#fields.hasErrors('password')}"
+                                th:text="#{label.mandatory}">Error</span>
+                        </p>
+                        <p>
+                            <span class="fa fa-map"></span><input type="text" name="nome"
+                                th:field="*{nome}" placeholder="nome"></input> <span
+                                th:if="${#fields.hasErrors('nome')}"
+                                th:text="#{label.mandatory}">Error</span>
+                        </p>
+                        <p>
+                            <span class="fa fa-user"></span><input type="text" name="cognome"
+                                th:field="*{cognome}" placeholder="cognome"></input> <span
+                                th:if="${#fields.hasErrors('cognome')}"
+                                th:text="#{label.mandatory}">Error</span>
+                        </p>
+                        <p>
+                            <span class="fa fa-user"></span><input type="text" name="email"
+                                th:field="*{email}" placeholder="email"></input> <span
+                                th:if="${#fields.hasErrors('email')}"
+                                th:text="#{label.mandatory}">Error</span>
+                        </p>
+                        <span style="width: 50%; text-align: left; float: left;"><input
+                            type="submit" value="Registrati"></input></span>
+                    </form>
+
 					<form action="/">
 						<span style="width: 50%; text-align: right;"><input
 							type="submit" value="Home"></input></span>
