--- a/galleria/src/main/resources/templates/admin.html
+++ b/galleria/src/main/resources/templates/admin.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
- <head>
- <title>Welcome Security with Spring Boot!</title>
- </head>
- <body>
-     <h1 style="color:blue"> Hello! This is Admin Page!</h1>
-     
-     <a style="color:blue" th:href="@{/}">Go to Home Page</a>
-     
-     <br/>
-     
-     <form th:action="@{/logout}" method="post">
-         <input type="submit" value="Sign Out"/>
-     </form>
-     
- </body>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<head>
+<title>Welcome Security with Spring Boot!</title>
+<link href="../static/css/admin.css" th:href="@{/css/admin.css}"
+	rel="stylesheet" media="screen" type="text/css" />
+<link href="../static/vendor/font-awesome/css/font-awesome.min.css"
+	th:href="@{/vendor/font-awesome/css/font-awesome.min.css}"
+	rel="stylesheet" media="screen" type="text/css" />
+</head>
+<body>
+	<h1 style="color: blue">Hello! This is Admin Page!</h1>
+
+	<a style="color: blue" th:href="@{/}">Go to Home Page</a><br></br>
+	<a style="color: blue" th:href="@{/admin/mostraUtenti}">Nomina Admin</a><br></br>
+
+	<br />
+
+	<form th:action="@{/logout}" method="post">
+		<input type="submit" value="Sign Out" />
+	</form>
+
+</body>
 </html>
