--- a/galleria/src/main/resources/templates/admin.html
+++ b/galleria/src/main/resources/templates/admin.html
@@ -14,7 +14,7 @@
 	<h1 style="color: blue">Hello! This is Admin Page!</h1>
 
 	<a style="color: blue" th:href="@{/}">Go to Home Page</a><br></br>
-	<a style="color: blue" th:href="@{/admin/mostraUtenti}">Nomina Admin</a><br></br>
+	<a style="color: blue" th:href="@{/admin/registraAdmin}">Registra Admin</a><br></br>
 
 	<br />
 
