Pagina admin in lavorazione

--- a/galleria/src/main/resources/templates/admin.html
+++ b/galleria/src/main/resources/templates/admin.html
@@ -3,24 +3,148 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-<title>Welcome Security with Spring Boot!</title>
-<link href="../static/css/admin.css" th:href="@{/css/admin.css}"
-	rel="stylesheet" media="screen" type="text/css" />
+<title>Admin</title>
+<link href="../static/vendor/bootstrap/css/bootstrap.min.css"
+	th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet"
+	media="screen" type="text/css" />
 <link href="../static/vendor/font-awesome/css/font-awesome.min.css"
 	th:href="@{/vendor/font-awesome/css/font-awesome.min.css}"
 	rel="stylesheet" media="screen" type="text/css" />
-</head>
-<body>
-	<h1 style="color: blue">Hello! This is Admin Page!</h1>
+<link href="../static/css/admin.css" th:href="@{/css/admin.css}"
+	rel="stylesheet" media="screen" type="text/css" />
 
-	<a style="color: blue" th:href="@{/}">Go to Home Page</a><br></br>
-	<a style="color: blue" th:href="@{/admin/registraAdmin}">Registra Admin</a><br></br>
+</head>
+<!-- <h1 style="color: blue">Hello! This is Admin Page!</h1>
+
+	<a style="color: blue" th:href="@{/}">Go to Home Page</a>
+	<br></br>
+	<a th:href="@{/admin/registraAdmin}">Registra
+Admin</a>
+	<br></br>
+	<a style="color: blue" th:href="@{/admin/autori}">Gestisci Autori</a>
+	<br></br>
+	<a style="color: blue" th:href="@{/admin/opere}">Gestisci Opere</a>
+	<br></br>
+	<a style="color: blue" th:href="@{/admin/stanze}">Gestisci Stanze</a>
+	<br></br>
+	
 
 	<br />
 
 	<form th:action="@{/logout}" method="post">
 		<input type="submit" value="Sign Out" />
 	</form>
+ -->
+
+<body class="home">
+	<div class="container-fluid display-table">
+		<div class="row display-table-row">
+			<div
+				class="col-md-2 col-sm-1 hidden-xs display-table-cell v-align box"
+				id="navigation">
+				<div class="logo">
+					<a href="/"><img
+						src="http://jskrishna.com/work/merkury/images/logo.png"
+						alt="merkery_logo" class="hidden-xs hidden-sm"></img> <img
+						src="http://jskrishna.com/work/merkury/images/circle-logo.png"
+						alt="merkery_logo" class="visible-xs visible-sm circle-logo"></img>
+					</a>
+				</div>
+				<div class="navi">
+					<ul>
+						<li class="active"><a href="#"><i class="fa fa-home"
+								aria-hidden="true"></i><span class="hidden-xs hidden-sm">Home</span></a></li>
+						<li><a th:href="@{/admin/stanze}"><i class="fa fa-tasks"
+								aria-hidden="true"></i><span class="hidden-xs hidden-sm">Stanze</span></a></li>
+						<li><a th:href="@{/admin/autori}"><i
+								class="fa fa-bar-chart" aria-hidden="true"></i><span
+								class="hidden-xs hidden-sm">Autori</span></a></li>
+						<li><a href="#"><i class="fa fa-user" aria-hidden="true"></i><span
+								class="hidden-xs hidden-sm">Non lo so</span></a></li>
+						<li><a href="#"><i class="fa fa-calendar"
+								aria-hidden="true"></i><span class="hidden-xs hidden-sm">Users</span></a></li>
+						<li><a th:href="@{/admin/opere}"><i class="fa fa-cog"
+								aria-hidden="true"></i><span class="hidden-xs hidden-sm">Opere</span></a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="col-md-10 col-sm-11 display-table-cell v-align">
+				<!--<button type="button" class="slide-toggle">Slide Toggle</button> -->
+				<div class="row">
+					<header>
+						<div class="col-md-7">
+							<nav class="navbar-default pull-left">
+								<div class="navbar-header">
+									<button type="button" class="navbar-toggle collapsed"
+										data-toggle="offcanvas" data-target="#side-menu"
+										aria-expanded="false">
+										<span class="sr-only">Toggle navigation</span> <span
+											class="icon-bar"></span> <span class="icon-bar"></span> <span
+											class="icon-bar"></span>
+									</button>
+								</div>
+							</nav>
+							<div class="search hidden-xs hidden-sm">Galleria D'Arte -
+								Pagina Admin</div>
+						</div>
+						<div class="col-md-5">
+							<div class="header-rightside">
+								<ul class="list-inline header-top pull-right">
+									<li><i class="fa fa-user" aria-hidden="true"></i></li>
+									<li>Nome</li>
+									<li>Email</li>
+									<li>
+										<form th:action="@{/logout}" method="post">
+											<input class="btn btn-primary" type="submit" value="Sign Out" />
+										</form>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</header>
+				</div>
+				<div class="user-dashboard">
+					<h1>Bentornato, Nome Utente</h1>
+				</div>
+			</div>
+		</div>
+
+	</div>
+
+
+
+	<!-- Modal -->
+	<div id="add_project" class="modal fade" role="dialog">
+		<div class="modal-dialog">
+
+			<!-- Modal content-->
+			<div class="modal-content">
+				<div class="modal-header login-header">
+					<button type="button" class="close" data-dismiss="modal">×</button>
+					<h4 class="modal-title">Add Project</h4>
+				</div>
+				<div class="modal-body">
+					<input type="text" placeholder="Project Title" name="name"></input>
+					<input type="text" placeholder="Post of Post" name="mail"></input>
+					<input type="text" placeholder="Author" name="passsword"></input>
+					<textarea placeholder="Desicrption"></textarea>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="cancel" data-dismiss="modal">Close</button>
+					<button type="button" class="add-project" data-dismiss="modal">Save</button>
+				</div>
+			</div>
+
+		</div>
+	</div>
+	<script th:inline="javascript">
+		$(document).ready(function() {
+			$('[data-toggle="offcanvas"]').click(function() {
+				$("#navigation").toggleClass("hidden-xs");
+			});
+		});
+	</script>
+	<script th:src="@{../vendor/bootstrap/js/bootstrap.min.js}">...</script>
 
 </body>
 </html>
