--- a/galleria/src/main/resources/templates/datiAdmin.html
+++ b/galleria/src/main/resources/templates/datiAdmin.html
@@ -13,10 +13,10 @@
 	<div class="main">
 		<div class="container">
 			<div class="middle">
-				<h2>Benvenuto <span th:text="${user.username}" ></span>, questi sono i tuoi dati:<br></br><br></br>
-				Nome: <span th:text="${user.nome}" ></span><br></br>
-				Cognome: <span th:text="${user.cognome}" ></span><br></br>
-				Email: <span th:text="${user.email}" ></span><br></br>
+				<h2>Benvenuto <span th:text="${admin.username}" ></span>, questi sono i tuoi dati:<br></br><br></br>
+				Nome: <span th:text="${admin.nome}" ></span><br></br>
+				Cognome: <span th:text="${admin.cognome}" ></span><br></br>
+				Email: <span th:text="${admin.email}" ></span><br></br>
 				
 				</h2>
 
