--- a/galleria/src/main/resources/templates/signUp.html
+++ b/galleria/src/main/resources/templates/signUp.html
@@ -13,7 +13,7 @@
 		<div class="container">
 			<div class="middle">
 				<div id="login">
-					<form th:action="@{/registraAdmin}" th:object="${admin}" method="post">
+					<form th:action="@{/admin/registraAdmin}" th:object="${admin}" method="post">
                         <p>
                             <span class="fa fa-user"></span> 
                             <input type="text"
