--- a/galleria/src/main/resources/templates/autore/datiAutore.html
+++ b/galleria/src/main/resources/templates/autore/datiAutore.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-<title>Admin - Autori</title>
+<title>Admin - Dati Autore</title>
 <link href="../static/vendor/bootstrap/css/bootstrap.min.css"
 	th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet"
 	media="screen" type="text/css" />
@@ -23,9 +23,8 @@
 				class="col-md-2 col-sm-1 hidden-xs display-table-cell v-align box"
 				id="navigation">
 				<div class="logo">
-					<a href="/"><img
-						src="/img/profile.png" alt="logo" class="hidden-xs hidden-sm"></img> 
-					</a>
+					<a href="/"><img src="/img/profile.png" alt="logo"
+						class="hidden-xs hidden-sm"></img> </a>
 				</div>
 				<div class="navi">
 					<ul>
@@ -81,40 +80,28 @@
 					</header>
 				</div>
 				<div class="row col-md-10 col-md-offset-2 user-dashboard">
-				<div style="text-align:center">
-				<form th:action="@{/admin/autore/inserisci}" method="get">
-				<input type="submit" class="btn btn-primary" value="Inserisci Nuovo Autore"></input>
-				</form>
-				</div>
-					<table class="table table-striped custab">
-						<tr>
-							<th>Nome</th>
-							<th>Cognome</th>
-							<th>Nazionalità</th>
-							<th>Data Nascita</th>
-							<th>Data Morte</th>
-							<th class="text-center">Azione</th>
-						</tr>
-						<th:foreach th:each="autore: ${autori}">		
-						<tr>
-							<td>${autore.nome}</td>
-							<td>${autore.cognome}</td>
-							<td>${autore.nazionalita}</td>
-							<td>${autore.dataNascita}</td>
-							<td>${autore.dataMorte}</td>
-							<td class="text-center">
-							<a class='btn btn-info btn-xs' th:href="@{autore/modifica?(id=${autore.id})}">
-							<span class="glyphicon glyphicon-edit"></span>Modifica</a> 
-							<a th:href="@{autore/elimina?(id=${autore.id})}" class="btn btn-danger btn-xs">
-							<span class="glyphicon glyphicon-remove"></span> Elimina</a>
-							</td>
-						</tr>
-						</th:foreach>
-					</table>
+					Operazione eseguita con successo, hai inserito:
+					<div>
+						<p th:text="'Nome: ' + ${autore.nomeAutore}" />
+					</div>
+					<div>
+						<p th:text="'Nazionalita: ' + ${autore.nazionalita}" />
+					</div>
+					<div>
+						<p th:text="'Anno di nascita: ' + ${autore.annoNascita}" />
+					</div>
+					<div>
+						<p th:if="${autore.annoMorte}"
+							th:text="#{label.annoMorte} +' '+ ${autore.annoMorte}"></p>
+					</div>
+					<form th:action="@{/admin/autore/inserisci}" method="get">
+						<input type="submit" class="btn btn-primary"
+							value="Inserisci Nuovo Autore"></input>
+					</form>
 				</div>
 			</div>
 		</div>
-</div>
+	</div>
 
 
 	<script th:inline="javascript">
