--- a/galleria/src/main/resources/templates/form.html
+++ b/galleria/src/main/resources/templates/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>New Customer</title>
+    <title>Nuova Opera</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
     <body>
