--- a/galleria/src/main/resources/templates/admin/opere.html
+++ b/galleria/src/main/resources/templates/admin/opere.html
@@ -3,35 +3,128 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-<title>Welcome Security with Spring Boot!</title>
-<link href="../static/css/admin.css" th:href="@{/css/admin.css}"
-	rel="stylesheet" media="screen" type="text/css" />
+<title>Admin - Autori</title>
+<link href="../static/vendor/bootstrap/css/bootstrap.min.css"
+	th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet"
+	media="screen" type="text/css" />
 <link href="../static/vendor/font-awesome/css/font-awesome.min.css"
 	th:href="@{/vendor/font-awesome/css/font-awesome.min.css}"
 	rel="stylesheet" media="screen" type="text/css" />
+<link href="../static/css/admin.css" th:href="@{/css/admin.css}"
+	rel="stylesheet" media="screen" type="text/css" />
+<link href="../static/css/table.css" th:href="@{/css/table.css}"
+	rel="stylesheet" media="screen" />
 </head>
-<body>
-	<h1 style="color: blue">Hello! This is Admin Page!</h1>
 
-	<a style="color: blue" th:href="@{/}">Go to Home Page</a>
-	<br></br>
-	<a style="color: blue" th:href="@{/admin/registraAdmin}">Registra
-		Admin</a>
-	<br></br>
-	<a style="color: blue" th:href="@{/admin/autori}">Gestisci Autori</a>
-	<br></br>
-	<a style="color: blue" th:href="@{/admin/opere}">Gestisci Opere</a>
-	<br></br>
-	<a style="color: blue" th:href="@{/admin/stanze}">Gestisci Stanze</a>
-	<br></br>
-	
+<body class="home">
+	<div class="container-fluid display-table">
+		<div class="row display-table-row">
+			<div
+				class="col-md-2 col-sm-1 hidden-xs display-table-cell v-align box"
+				id="navigation">
+				<div class="logo">
+					<a href="/"><img
+						src="/img/profile.png" alt="logo" class="hidden-xs hidden-sm"></img> 
+					</a>
+				</div>
+				<div class="navi">
+					<ul>
+						<li><a href="/admin"><i class="fa fa-home"
+								aria-hidden="true"></i><span class="hidden-xs hidden-sm">Home</span></a></li>
+						<li><a th:href="@{/admin/opere}"><i
+								class="fa fa-file-image-o" aria-hidden="true"></i><span
+								class="hidden-xs hidden-sm">Opere</span></a></li>
+						<li><a th:href="@{/admin/stanze}"><i class="fa fa-map-o"
+								aria-hidden="true"></i><span class="hidden-xs hidden-sm">Stanze</span></a></li>
+						<li class="active"><a th:href="@{/admin/autori}"><i
+								class="fa fa-user" aria-hidden="true"></i><span
+								class="hidden-xs hidden-sm">Autori</span></a></li>
+						<li><a href="#"><i class="fa fa-plus-circle"
+								aria-hidden="true"></i><span class="hidden-xs hidden-sm">Aggiungi
+									Admin</span></a></li>
+						<li><div class="bottom"></div></li>
+					</ul>
+				</div>
+			</div>
+			<div class="col-md-10 display-table-cell v-align">
+				<div class="row">
+					<header>
+						<div class="col-md-7">
+							<nav class="navbar-default pull-left">
+								<div class="navbar-header">
+									<button type="button" class="navbar-toggle collapsed"
+										data-toggle="offcanvas" data-target="#side-menu"
+										aria-expanded="false">
+										<span class="sr-only">Toggle navigation</span> <span
+											class="icon-bar"></span> <span class="icon-bar"></span> <span
+											class="icon-bar"></span>
+									</button>
+								</div>
+							</nav>
+							<div class="search hidden-xs hidden-sm">Galleria D'Arte -
+								Pagina Admin</div>
+						</div>
+						<div class="col-md-5">
+							<div class="header-rightside">
+								<ul class="list-inline header-top pull-right">
+									<li><i class="fa fa-user" aria-hidden="true"></i></li>
+									<li>Username</li>
+									<li>Email</li>
+									<li>
+										<form th:action="@{/logout}" method="post">
+											<input class="btn btn-primary" type="submit" value="Log Out" />
+										</form>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</header>
+				</div>
+				<div class="row col-md-10 col-md-offset-2 user-dashboard">
+				<div style="text-align:center">
+				<form th:action="@{/admin/autore/inserisci}" method="get">
+				<input type="submit" class="btn btn-primary" value="Inserisci Nuovo Autore"></input>
+				</form>
+				</div>
+					<table class="table table-striped custab">
+						<tr>
+							<th>Nome</th>
+							<th>Cognome</th>
+							<th>Nazionalità</th>
+							<th>Data Nascita</th>
+							<th>Data Morte</th>
+							<th class="text-center">Azione</th>
+						</tr>
+						<th:foreach th:each="autore: ${autori}">		
+						<tr>
+							<td><span th:text="${autore.nome}"></span></td>
+							<td><span th:text="${autore.cognome}"></span></td>
+							<td><span th:text="${autore.nazionalita}"></span></td>
+							<td><span th:text="${autore.dataNascita}"></span></td>
+							<td><span th:text="${autore.dataMorte}"></span></td>
+							<td class="text-center">
+							<a class='btn btn-info btn-xs' th:href="@{autore/modifica?(id=${autore.id})}">
+							<span class="glyphicon glyphicon-edit"></span>Modifica</a> 
+							<a th:href="@{autore/elimina?(id=${autore.id})}" class="btn btn-danger btn-xs">
+							<span class="glyphicon glyphicon-remove"></span> Elimina</a>
+							</td>
+						</tr>
+						</th:foreach>
+					</table>
+				</div>
+			</div>
+		</div>
+</div>
 
 
-	<br />
-
-	<form th:action="@{/logout}" method="post">
-		<input type="submit" value="Sign Out" />
-	</form>
+	<script th:inline="javascript">
+		$(document).ready(function() {
+			$('[data-toggle="offcanvas"]').click(function() {
+				$("#navigation").toggleClass("hidden-xs");
+			});
+		});
+	</script>
+	<script th:src="@{../vendor/bootstrap/js/bootstrap.min.js}">...</script>
 
 </body>
 </html>
